fix: clickup 1abyw5x pagination cutoff
isn't cut off anymore height: 85vh

--- a/src/frontend/src/styles/LabellingRules.css
+++ b/src/frontend/src/styles/LabellingRules.css
@@ -4,7 +4,7 @@ body {
 
 .fieldsLabellingRules {
   position: fixed;
-  height: 88vh;
+  height: 85vh;
   width: 63vw;
   padding: 10px;
   overflow-x: auto;
@@ -13,7 +13,7 @@ body {
 
 .fieldsLabelling {
   position: fixed;
-  height: 88vh;
+  height: 85vh;
   width: 99vw;
   padding: 10px;
   overflow-x: auto;
@@ -21,7 +21,7 @@ body {
 }
 .fieldsRules {
   position: fixed;
-  height: 88vh;
+  height: 85vh;
   width: 36vw;
   padding: 10px;
   overflow-x: auto;
